fetch and show trending movies

--- a/index.html
+++ b/index.html
@@ -80,11 +80,12 @@
 		</header>
 
 		<main>
-			<section class="popular-movies-slider">
-				<h2 class="subtitle">Peliculas populares</h2>
-				<div class="swiper-container-popular swiper">
-					<div id="popular-movies" class="swiper-wrapper">
-						<div class="swiper-slide movie">
+			<section class="trending-movies-slider">
+				<h2 class="subtitle">Tendencias</h2>
+				<div class="swiper-container-trending swiper">
+					<div id="trending-movies" class="swiper-wrapper">
+
+						<!-- <div class="swiper-slide movie">
 							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
 							<div class="image-overlay">
 								<div class="overview">
@@ -105,38 +106,10 @@
 										illo. Assumenda facere molestias, illum ducimus dicta error,
 										vel necessitatibus aperiam provident quos, sequi aspernatur!
 									</p>
+									<button class="btn btn-secondary fs-4">Ver trailer</button>
 								</div>
 							</div>
-						</div>
-
-						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						</div>
-						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						</div>
-						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						</div>
-						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						</div>
-						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						</div>
-						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						</div>
-						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						</div>
-						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						</div>
-						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						</div>
-					</div>
+						</div> -->
 
 					<div class="swiper-button-next"></div>
 					<div class="swiper-button-prev"></div>
@@ -144,7 +117,7 @@
 			</section>
 
 			<section class="latest-movies-slider">
-				<h2 class="subtitle">Peliculas recientes</h2>
+				<h2 class="subtitle">Recientes</h2>
 				<div class="swiper-container-latest swiper">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide movie">
@@ -168,6 +141,7 @@
 										illo. Assumenda facere molestias, illum ducimus dicta error,
 										vel necessitatibus aperiam provident quos, sequi aspernatur!
 									</p>
+									<button class="btn btn-secondary fs-4">Ver trailer</button>
 								</div>
 							</div>
 						</div>
