fetch and show top rated movies

--- a/index.html
+++ b/index.html
@@ -63,15 +63,6 @@
 								class="dropdown-menu"
 								aria-labelledby="dropdownMenuButton1"
 							>
-								<li class="dropdown-item">Aventura</li>
-								<li class="dropdown-item">Aventura</li>
-								<li class="dropdown-item">Aventura</li>
-								<li class="dropdown-item">Aventura</li>
-								<li class="dropdown-item">Aventura</li>
-								<li class="dropdown-item">Aventura</li>
-								<li class="dropdown-item">Aventura</li>
-								<li class="dropdown-item">Aventura</li>
-								<li class="dropdown-item">Aventura</li>
 							</ul>
 						</div>
 					</div>
@@ -85,95 +76,15 @@
 				<div class="swiper-container-trending swiper">
 					<div id="trending-movies" class="swiper-wrapper">
 
-						<!-- <div class="swiper-slide movie">
-							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-							<div class="image-overlay">
-								<div class="overview">
-									<h3>Titulo de la pelicula</h3>
-									<span class="info-movie">Genero</span>
-									<span class="info-movie"
-										><i class="fas fa-star"></i> 9.0</span
-									>
-									<span class="info-movie"
-										><i class="far fa-calendar-alt"></i> 03/01/2022</span
-									>
-									<p>
-										Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-										Maxime officiis debitis nihil hic possimus fugiat
-										exercitationem? Exercitationem sapiente quibusdam itaque
-										libero assumenda placeat quia praesentium labore nihil nobis
-										totam maiores quas officia magnam, excepturi repudiandae
-										illo. Assumenda facere molestias, illum ducimus dicta error,
-										vel necessitatibus aperiam provident quos, sequi aspernatur!
-									</p>
-									<button class="btn btn-secondary fs-4">Ver trailer</button>
-								</div>
-							</div>
-						</div> -->
-
 					<div class="swiper-button-next"></div>
 					<div class="swiper-button-prev"></div>
 				</div>
 			</section>
 
-			<section class="latest-movies-slider">
-				<h2 class="subtitle">Recientes</h2>
-				<div class="swiper-container-latest swiper">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide movie">
-							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-							<div class="image-overlay">
-								<div class="overview">
-									<h3>Titulo de la pelicula</h3>
-									<span class="info-movie">Genero</span>
-									<span class="info-movie"
-										><i class="fas fa-star"></i> 9.0</span
-									>
-									<span class="info-movie"
-										><i class="far fa-calendar-alt"></i> 03/01/2022</span
-									>
-									<p>
-										Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-										Maxime officiis debitis nihil hic possimus fugiat
-										exercitationem? Exercitationem sapiente quibusdam itaque
-										libero assumenda placeat quia praesentium labore nihil nobis
-										totam maiores quas officia magnam, excepturi repudiandae
-										illo. Assumenda facere molestias, illum ducimus dicta error,
-										vel necessitatibus aperiam provident quos, sequi aspernatur!
-									</p>
-									<button class="btn btn-secondary fs-4">Ver trailer</button>
-								</div>
-							</div>
-						</div>
-
-						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						</div>
-						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						</div>
-						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						</div>
-						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						</div>
-						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						</div>
-						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						</div>
-						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						</div>
-						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						</div>
-						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						</div>
-					</div>
+			<section class="top-rated-movies-slider">
+				<h2 class="subtitle">Mejor valoradas</h2>
+				<div class="swiper-container-top-rated swiper">
+					<div id="top-rated-movies" class="swiper-wrapper"></div>
 
 					<div class="swiper-button-next"></div>
 					<div class="swiper-button-prev"></div>
@@ -210,7 +121,7 @@
 				</div>
 
 				<div class="copy">
-					<span>All rights reserved - 2022</span>
+					<span id="copy"></span>
 				</div>
 			</section>
 		</footer>
