Get and show trailers

--- a/index.html
+++ b/index.html
@@ -103,6 +103,20 @@
 			</section>
 		</main>
 
+		<!-- The overlay -->
+		<section>
+			<div id="overlay-trailers" class="overlay-trailers">
+
+				<!-- Button to close the overlay navigation -->
+				<a href="javascript:void(0)" class="closebtn" onclick="closeOverlayTrailers()">&times;</a>
+
+				<!-- Overlay content -->
+				<div id="overlay-trailer-content" class="overlay-content"></div>
+
+			</div>
+
+		</section>
+
 		<footer>
 			<section class="footer">
 				<div class="contact">
@@ -113,7 +127,8 @@
 						target="_blank"
 						>LukaLiuzzi</a
 					>
-
+					
+					<span class="d-none d-sm-block">&bull;</span>
 					<i class="fab fa-linkedin"></i>
 					<a href="https://www.linkedin.com/in/lukaliuzzi/" target="_blank"
 						>lukaliuzzi</a
