get and show trailers and carousel for view all trailers

--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
 				<!-- Overlay content -->
 				<div id="overlay-trailer-content" class="overlay-content"></div>
 
+				<!-- Button to slide carousel -->
+				<a id="left-arrow" href="javascript:void(0)" class="arrow left-arrow"><i class="fas fa-chevron-left"></i></a>
+
+				<a id="right-arrow" href="javascript:void(0)" class="arrow right-arrow"><i class="fas fa-chevron-right"></i></a>
+
+
 			</div>
 
 		</section>
