--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			</section>
 
 			<section class="movies-container">
-				<h2 class="subtitle">Peliculas</h2>
+				<h2 id="movies-title" class="subtitle">Peliculas</h2>
 				<div id="movies" class="grid-container"></div>
 
 				<div class="pagination">
