fixed embed trailers bugs and bg to trailers

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 			<section class="trending-movies-slider">
 				<h2 class="subtitle">Tendencias</h2>
 				<div class="swiper-container-trending swiper">
-					<div id="trending-movies" class="swiper-wrapper">
+					<div id="trending-movies" class="swiper-wrapper"></div>
 
 					<div class="swiper-button-next"></div>
 					<div class="swiper-button-prev"></div>
-				</div>
+				
 			</section>
 
 			<section class="top-rated-movies-slider">
@@ -108,7 +108,7 @@
 			<div id="overlay-trailers" class="overlay-trailers">
 
 				<!-- Button to close the overlay navigation -->
-				<a href="javascript:void(0)" class="closebtn" onclick="closeOverlayTrailers()">&times;</a>
+				<a id="close-trailers-btn" class="closebtn">&times;</a>
 
 				<!-- Overlay content -->
 				<div id="overlay-trailer-content" class="overlay-content"></div>
