--- a/index.html
+++ b/index.html
@@ -19,15 +19,8 @@
 			href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
 		/>
 		<!-- CSS -->
-		<link rel="stylesheet" href="public/css/bootstrap.css" />
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-			integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-			crossorigin="anonymous"
-			referrerpolicy="no-referrer"
-		/>
-		<link rel="stylesheet" href="public/css/main.css" />
+		<link rel="stylesheet" href="css/bootstrap.css" />
+		<link rel="stylesheet" href="css/main.css" />
 	</head>
 	<body>
 		<header>
@@ -147,8 +140,8 @@
 			</section>
 		</footer>
 
-		<script src="public/js/bootstrap.bundle.js"></script>
+		<script src="js/bootstrap.bundle.js"></script>
 		<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-		<script src="public/js/main.js"></script>
+		<script src="js/app.js"></script>
 	</body>
 </html>
