--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 		<!-- CSS -->
 		<link rel="stylesheet" href="css/bootstrap.css" />
 		<link rel="stylesheet" href="css/main.css" />
+
+		<!-- SCRIPTS -->
+		<script src="js/bootstrap.bundle.js" defer></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.4.1/swiper-bundle.min.js" integrity="sha512-pY1t/ADgTwbfGbw0+mRGd33EroA5YgRUWhQNFpPIAdBzyoSb38FsFrf4wBTcS3GFPdTfgtpRrbGCkdl2C2OXYA==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
+		<script src="js/app.js" defer></script>
 	</head>
 	<body>
 		<header>
@@ -141,9 +146,5 @@
 				</div>
 			</section>
 		</footer>
-
-		<script src="js/bootstrap.bundle.js"></script>
-		<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-		<script src="js/app.js"></script>
 	</body>
 </html>
