--- a/index.html
+++ b/index.html
@@ -124,20 +124,19 @@
 		</section>
 
 		<footer>
-			<section class="footer">
+			<section class="footer d-flex flex-column justify-content-center align-items-center flex-md-row justify-content-md-evenly">
 				<div class="contact">
-					<i class="fab fa-github d-none d-sm-block"></i>
+					
 					<a
-						class="d-none d-sm-block"
 						href="https://github.com/LukaLiuzzi"
 						target="_blank"
-						>LukaLiuzzi</a
+						><i class="fab fa-github"></i> LukaLiuzzi</a
 					>
-					
-					<span class="d-none d-sm-block">&bull;</span>
-					<i class="fab fa-linkedin"></i>
+				</div>
+					<!-- <span>&bull;</span> -->
+				<div class="contact">
 					<a href="https://www.linkedin.com/in/lukaliuzzi/" target="_blank"
-						>lukaliuzzi</a
+						><i class="fab fa-linkedin"></i> lukaliuzzi</a
 					>
 				</div>
 
