modularizing javascript in different files

--- a/index.html
+++ b/index.html
@@ -25,7 +25,20 @@
 		<!-- SCRIPTS -->
 		<script src="js/bootstrap.bundle.js" defer></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.4.1/swiper-bundle.min.js" integrity="sha512-pY1t/ADgTwbfGbw0+mRGd33EroA5YgRUWhQNFpPIAdBzyoSb38FsFrf4wBTcS3GFPdTfgtpRrbGCkdl2C2OXYA==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
-		<script src="js/app.js" defer></script>
+		<script src="js/Variables.js" defer></script>
+		<script src="js/Scroll.js" defer></script>
+		<script src="js/Render.js" defer></script>
+		<script src="js/GetMovies.js" defer></script>
+		<script src="js/FooterCopy.js" defer></script>
+		<script src="js/ShowMovies.js" defer></script>
+		<script src="js/Trailers.js" defer></script>
+		<script src="js/GetColor.js" defer></script>
+		<script src="js/Search.js" defer></script>
+		<script src="js/Genres.js" defer></script>
+		<script src="js/Pagination.js" defer></script>
+		<script src="js/SeeLater.js" defer></script>
+		<script src="js/Swiper.js" defer></script>
+		<script src="js/App.js" defer></script>
 	</head>
 	<body>
 		<header>
@@ -103,17 +116,13 @@
 			</section>
 		</main>
 
-		<!-- The overlay -->
 		<section>
 			<div id="overlay-trailers" class="overlay-trailers">
 
-				<!-- Button to close the overlay navigation -->
 				<a id="close-trailers-btn" class="closebtn">&times;</a>
 
-				<!-- Overlay content -->
 				<div id="overlay-trailer-content" class="overlay-content"></div>
 
-				<!-- Button to slide carousel -->
 				<a id="left-arrow" href="javascript:void(0)" class="arrow left-arrow"><i class="fas fa-chevron-left"></i></a>
 
 				<a id="right-arrow" href="javascript:void(0)" class="arrow right-arrow"><i class="fas fa-chevron-right"></i></a>
@@ -133,7 +142,6 @@
 						><i class="fab fa-github"></i> LukaLiuzzi</a
 					>
 				</div>
-					<!-- <span>&bull;</span> -->
 				<div class="contact">
 					<a href="https://www.linkedin.com/in/lukaliuzzi/" target="_blank"
 						><i class="fab fa-linkedin"></i> lukaliuzzi</a
