--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<script src="js/Pagination.js" defer></script>
 		<script src="js/SeeLater.js" defer></script>
 		<script src="js/Swiper.js" defer></script>
-		<script src="js/App.js" defer></script>
+		<script src="js/Main.js" defer></script>
 	</head>
 	<body>
 		<header>
