change to module js

--- a/index.html
+++ b/index.html
@@ -25,20 +25,7 @@
 		<!-- SCRIPTS -->
 		<script src="js/bootstrap.bundle.js" defer></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.4.1/swiper-bundle.min.js" integrity="sha512-pY1t/ADgTwbfGbw0+mRGd33EroA5YgRUWhQNFpPIAdBzyoSb38FsFrf4wBTcS3GFPdTfgtpRrbGCkdl2C2OXYA==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
-		<script src="js/Variables.js" defer></script>
-		<script src="js/Scroll.js" defer></script>
-		<script src="js/Render.js" defer></script>
-		<script src="js/GetMovies.js" defer></script>
-		<script src="js/FooterCopy.js" defer></script>
-		<script src="js/ShowMovies.js" defer></script>
-		<script src="js/Trailers.js" defer></script>
-		<script src="js/GetColor.js" defer></script>
-		<script src="js/Search.js" defer></script>
-		<script src="js/Genres.js" defer></script>
-		<script src="js/Pagination.js" defer></script>
-		<script src="js/SeeLater.js" defer></script>
-		<script src="js/Swiper.js" defer></script>
-		<script src="js/Main.js" defer></script>
+		<script src="js/Main.js" type="module"></script>
 	</head>
 	<body>
 		<header>
